[package]
name = "redis-rs"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
async-trait = "0.1.89"
bytes = "1.3.0"                                     # helps manage buffers
log = "0.4.28"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full", "test-util"] } # async networking

[dev-dependencies]
rstest = "0.26.1"
